Installer options update for 3.1 and nightly

--- a/_includes/manuals/3.1/3.2.2_installer_options.md
+++ b/_includes/manuals/3.1/3.2.2_installer_options.md
@@ -138,6 +138,10 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_host_extra_validator' puppet module (<a href="https://github.com/theforeman/foreman_host_extra_validator">foreman_host_extra_validator</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-host-reports</td>
+        <td>Enable 'foreman_plugin_host_reports' puppet module (<a href="https://github.com/theforeman/foreman_host_reports">foreman_host_reports</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-kubevirt</td>
         <td>Enable 'foreman_plugin_kubevirt' puppet module (<a href="/plugins/foreman_kubevirt">foreman_kubevirt</a>)</td>
       </tr>
@@ -284,6 +288,10 @@ More information about compute resources can be found in the [Compute Resources 
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-remote-execution-ssh</td>
         <td>Enable 'foreman_proxy_plugin_remote_execution_ssh' puppet module (<a href="/plugins/foreman_remote_execution">smart_proxy_remote_execution_ssh</a>)</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-reports</td>
+        <td>Enable 'foreman_proxy_plugin_reports' puppet module (<a href="https://github.com/theforeman/smart_proxy_reports">smart_proxy_reports</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-salt</td>
@@ -548,6 +556,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>OAuth consumer secret</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-oauth-effective-user</td>
+        <td>User to be used for REST interaction</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-oauth-map-users</td>
         <td>Should Foreman use the foreman_user header to identify API user?</td>
       </tr>
@@ -562,6 +574,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-rails-cache-store</td>
         <td>Set rails cache store</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-register-in-foreman</td>
+        <td>Register host in Foreman</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-server-port</td>
@@ -1408,10 +1424,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Hostname of your puppetmaster (server directive in puppet.conf)</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-remove-lock</td>
-        <td>Remove the agent lock when running.</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--puppet-report</td>
         <td>Send reports to the Puppet Master</td>
       </tr>
@@ -1506,10 +1518,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--puppet-server-compile-mode</td>
         <td>Used to control JRuby's "CompileMode", which may improve performance. Defaults to undef (off).</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--puppet-server-config-version</td>
-        <td>How to determine the configuration version. When using git_repo, by default a git describe approach will be installed.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-connect-timeout</td>
@@ -2048,6 +2056,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>The callback plugin to configure in ansible.cfg</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-collections-paths</td>
+        <td>Paths where to look for ansible collections</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-enabled</td>
         <td>Enables/disables the ansible plugin</td>
       </tr>
@@ -2066,6 +2078,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-manage-runner-repo</td>
         <td>If true, adds upstream repositories to install ansible-runner package from</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-report-type</td>
+        <td>Set to "foreman" for no changes. If set to "proxy", the Reports plugin for proxy must be enabled in order to actually make use of the new format of reports</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-roles-path</td>
@@ -2374,6 +2390,30 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-ssh-keygen</td>
         <td>Location of the ssh-keygen binary</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-reports-enabled</td>
+        <td>enables/disables the reports plugin</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-reports-keep-reports</td>
+        <td>Keep sent reports in spool_dir directory when enabled, move files from the place on a regular basis (e.g. via cronjob).</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-reports-listen-on</td>
+        <td>proxy feature listens on http, https, or both</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-reports-proxy-name</td>
+        <td>Proxy hostname to appear in reports JSON</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-reports-spool-dir</td>
+        <td>Spool directory with processed reports</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-reports-version</td>
+        <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-api</td>
