Add to_singlepage script

--- a/_includes/manuals/nightly/4.1.4_auditing.md
+++ b/_includes/manuals/nightly/4.1.4_auditing.md
@@ -25,13 +25,13 @@ However, you can configure an amount of days to keep in Foreman in Settings (`Ad
 Available parameters:
 * days => number of days to keep audits (defaults to 90)
 
-Examples:
-1. Expires all audits older then 7 days
+To expire all audits older then 7 days
 
 ```
 foreman-rake audits:expire days=7
 ```
 
+Note that you can also set a cronjob which will delete your audits periodically using this rake task.
 
 #### Anonymize old audits
 
