--- a/_includes/manuals/3.1/1.2_release_notes.md
+++ b/_includes/manuals/3.1/1.2_release_notes.md
@@ -24,7 +24,290 @@ Existing installations should start thinking about a migration plan.
 
 Note that this is only support to run Foreman and Foreman Proxy themselves on EL7. Managing EL7 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
-### Release Notes
+### Release notes for 3.1.0
+#### Foreman - API
+* Drop non-standard compliant way of selecting api version \- [#33787](https://projects.theforeman.org/issues/33787)
+* The default password in settings is not encoded \- [#33732](https://projects.theforeman.org/issues/33732)
+* GraphQL response should return valid attribute values \- [#33647](https://projects.theforeman.org/issues/33647)
+* please expose capabilities in the smart_proxies show API \- [#33611](https://projects.theforeman.org/issues/33611)
+* Undefined method error when calling Api::V2::SmartProxiesController#import_puppetclasses \- [#33539](https://projects.theforeman.org/issues/33539)
+* Host creation API "overwrite" parameter is not documented \- [#32541](https://projects.theforeman.org/issues/32541)
+* Register query fields with custom resolvers \- [#32214](https://projects.theforeman.org/issues/32214)
+
+#### Foreman - Audit Log
+* Audits should be searchable by the current user so a role with filter to "see my audits" can be created \- [#33551](https://projects.theforeman.org/issues/33551)
+* Audits cleanup \- [#27024](https://projects.theforeman.org/issues/27024)
+
+#### Foreman - Authentication
+* Appropriate error message to be shown when creating authsource with same name as existing authsource. \- [#33248](https://projects.theforeman.org/issues/33248)
+
+#### Foreman - BMC
+* bmc_credentials_accessible hides BMC information in host view \- [#33826](https://projects.theforeman.org/issues/33826)
+
+#### Foreman - Compute resources
+* Associate a VM via API  to a compute resource \- [#32769](https://projects.theforeman.org/issues/32769)
+
+#### Foreman - Compute resources - VMware
+* Compute Resource cannot list the VMs if any VMs in the datacenter has config.instanceUuid set to '' \- [#33396](https://projects.theforeman.org/issues/33396)
+* Compute profile references wrong datacenter path after changing datacenter name \- [#32792](https://projects.theforeman.org/issues/32792)
+* app/models/concerns/orchestration/compute.rb:93 rescue ends up with error (ArgumentError): too few arguments \- [#32273](https://projects.theforeman.org/issues/32273)
+
+#### Foreman - Compute resources - libvirt
+* Libvirt connection leaks \- [#14854](https://projects.theforeman.org/issues/14854)
+
+#### Foreman - Compute resources - oVirt
+* Foreman error on retrieving networks/vnics from oVirt if description contains non ascii characters \- [#32908](https://projects.theforeman.org/issues/32908)
+
+#### Foreman - Facts
+* Ignore unstable legacy Facter facts  \- [#33778](https://projects.theforeman.org/issues/33778)
+* RHSM IPv6 fact is not being parsed for foreman hosts. \- [#33776](https://projects.theforeman.org/issues/33776)
+* Reduce allocations in FactImporter#update_facts \- [#33639](https://projects.theforeman.org/issues/33639)
+* Add fact parser registry \- [#33419](https://projects.theforeman.org/issues/33419)
+* foreman-rake facts:clean fails with foreign key constraint violation \- [#30028](https://projects.theforeman.org/issues/30028)
+* Ansible Windows network facts fail to import \- [#23936](https://projects.theforeman.org/issues/23936)
+
+#### Foreman - Host creation
+* ipv4/6 auto-suggested address should be removed when the different domain and subnet with ipv6/4 are selected \- [#33794](https://projects.theforeman.org/issues/33794)
+* Template is written twice when resolving provisioning templates for a host \- [#33793](https://projects.theforeman.org/issues/33793)
+* The edit interface view (in interface tab) is too narrow for vmware network names \- [#33574](https://projects.theforeman.org/issues/33574)
+
+#### Foreman - Host registration
+* In UI form show proxies that have enabled Registration and templates features only \- [#33697](https://projects.theforeman.org/issues/33697)
+* Run 'subscription-manager clean' when force=true \- [#33540](https://projects.theforeman.org/issues/33540)
+* Use PF4 styling for warning in registration form \- [#33390](https://projects.theforeman.org/issues/33390)
+* Make the registration form more compact \- [#33389](https://projects.theforeman.org/issues/33389)
+* The katello-ca-consumer is not being removed when the force option is checked in the 'Advanced' tab under Hosts -&gt; Register Host  \- [#33305](https://projects.theforeman.org/issues/33305)
+* Remove hard-coded link to documentation \- [#33215](https://projects.theforeman.org/issues/33215)
+* Move katello_ca_consumer to registration template \- [#32678](https://projects.theforeman.org/issues/32678)
+
+#### Foreman - Inventory
+* Handle different Windows installation types \- [#33769](https://projects.theforeman.org/issues/33769)
+* Distinguish between "regular" hosts and hosts on which Foreman and/or smart proxy runs - models and fact processing \- [#32328](https://projects.theforeman.org/issues/32328)
+
+#### Foreman - JavaScript stack
+* Host details active tab not set correctly when tab name contains spaces \- [#33894](https://projects.theforeman.org/issues/33894)
+* Host details page needs some integration tests \- [#33833](https://projects.theforeman.org/issues/33833)
+* foreman-develop-package-release fails after removing react-intl \- [#33800](https://projects.theforeman.org/issues/33800)
+* Update pf4 to 4.162.2 \- [#33758](https://projects.theforeman.org/issues/33758)
+* Rename the link to old UI of Host detail \- [#33742](https://projects.theforeman.org/issues/33742)
+* Refactor ToastsList to use slice pattern \- [#33690](https://projects.theforeman.org/issues/33690)
+* remove snapshot testing from pf4 bookmarks \- [#33675](https://projects.theforeman.org/issues/33675)
+* update Audits and Models pages buttons to pf4 after searchbar styles changed to PF4 \- [#33635](https://projects.theforeman.org/issues/33635)
+* Toast type in errorToast is incorrect \- [#33514](https://projects.theforeman.org/issues/33514)
+* Use gray background only for overview tab on Host detail page \- [#33423](https://projects.theforeman.org/issues/33423)
+* Simplify ForemanSwitcher \- [#33416](https://projects.theforeman.org/issues/33416)
+* Slot&Fill reducer doesn't remove a fill from the store after unregistering \- [#33405](https://projects.theforeman.org/issues/33405)
+* Toast message is hidden \- [#33316](https://projects.theforeman.org/issues/33316)
+* Fix Nightly React test failures \- [#33265](https://projects.theforeman.org/issues/33265)
+* Add React error boundaries \- [#33026](https://projects.theforeman.org/issues/33026)
+* Add confirmation modal service \- [#32880](https://projects.theforeman.org/issues/32880)
+* Add PF4 Searchbar \- [#32750](https://projects.theforeman.org/issues/32750)
+* Make tabs on new Host detail page routable \- [#32398](https://projects.theforeman.org/issues/32398)
+* Add action items dropdown extension mechanism in host details page \- [#30981](https://projects.theforeman.org/issues/30981)
+* Add PF4 icons in empty state \- [#30865](https://projects.theforeman.org/issues/30865)
+
+#### Foreman - Packaging
+* Make dynflow-sidekiq@\* services part of foreman.service \- [#33723](https://projects.theforeman.org/issues/33723)
+
+#### Foreman - Performance
+* Drop Ruby pre-2.5 compatibility in Host#parse_ip_address \- [#33784](https://projects.theforeman.org/issues/33784)
+
+#### Foreman - Plugin integration
+* Allow foreman plugins to use webpack \- [#33626](https://projects.theforeman.org/issues/33626)
+* Improve Facets registration \- [#31372](https://projects.theforeman.org/issues/31372)
+
+#### Foreman - Proxy gateway
+* Drop unwanted URI parsing from NetHttpExtension \- [#32837](https://projects.theforeman.org/issues/32837)
+
+#### Foreman - Puppet integration
+* Remove Puppet API endpoints \- [#33550](https://projects.theforeman.org/issues/33550)
+* Extract Puppetclass migrations \- [#33541](https://projects.theforeman.org/issues/33541)
+* Extract ConfigGroup migrations \- [#31096](https://projects.theforeman.org/issues/31096)
+* Extract Environments migrations \- [#31060](https://projects.theforeman.org/issues/31060)
+
+#### Foreman - Rails
+* Cleanup Bullet config \- [#33851](https://projects.theforeman.org/issues/33851)
+* Create proper HttpUrl validator \- [#32892](https://projects.theforeman.org/issues/32892)
+
+#### Foreman - Rake tasks
+* don't warn about apipie cache when using "rake config" \- [#33671](https://projects.theforeman.org/issues/33671)
+* Add task to purge puppet data \- [#32652](https://projects.theforeman.org/issues/32652)
+
+#### Foreman - Reporting
+* Show warning on old Reports page \- [#33757](https://projects.theforeman.org/issues/33757)
+* Rename the Report template button \- [#33432](https://projects.theforeman.org/issues/33432)
+* Improve job invocation report template \- [#33223](https://projects.theforeman.org/issues/33223)
+
+#### Foreman - Search
+* User shouldn't have a login current_user \- [#33724](https://projects.theforeman.org/issues/33724)
+* Add scoped search definition for arf reports that finds reports for hosts owned by current user \- [#33025](https://projects.theforeman.org/issues/33025)
+
+#### Foreman - Settings
+* Foreman wont start with old settings in DB \- [#33861](https://projects.theforeman.org/issues/33861)
+* Settings defined in settings.yaml do not take precedence in the new DSL \- [#33791](https://projects.theforeman.org/issues/33791)
+* Setting DSL does not use the explicit initial values \- [#33740](https://projects.theforeman.org/issues/33740)
+* SettingRegistry fails on older categories if setting table is not ready \- [#33706](https://projects.theforeman.org/issues/33706)
+* Improve caching of SettingRegistry#load_values \- [#33640](https://projects.theforeman.org/issues/33640)
+* Use new DSL to define Puppet settings \- [#33607](https://projects.theforeman.org/issues/33607)
+* Use new DSL to define Provisioning settings \- [#33601](https://projects.theforeman.org/issues/33601)
+* Use new DSL to define Notification settings \- [#33596](https://projects.theforeman.org/issues/33596)
+* Use new DSL to define Email settings \- [#33595](https://projects.theforeman.org/issues/33595)
+* Use new DSL to define Authentication settings \- [#33589](https://projects.theforeman.org/issues/33589)
+* "OAuth map users" setting has a bad explanation \- [#33440](https://projects.theforeman.org/issues/33440)
+* Settings search is broken in hammer \- [#33347](https://projects.theforeman.org/issues/33347)
+* Mark Settings defined by DSL as special category in DB \- [#33280](https://projects.theforeman.org/issues/33280)
+* Use new DSL to define General settings \- [#32893](https://projects.theforeman.org/issues/32893)
+* Add custom validations to new setting DSL \- [#32403](https://projects.theforeman.org/issues/32403)
+* Extract Puppet setting \- [#32064](https://projects.theforeman.org/issues/32064)
+* Add more reliable way to detect Foreman CA certificate \- [#31049](https://projects.theforeman.org/issues/31049)
+* Reorder settings \- [#29288](https://projects.theforeman.org/issues/29288)
+
+#### Foreman - Smart Proxy
+* Add information about proxy status \- [#32727](https://projects.theforeman.org/issues/32727)
+
+#### Foreman - Statistics
+* Unused leftover methods in core \- [#33802](https://projects.theforeman.org/issues/33802)
+
+#### Foreman - TFTP
+* TFTP Unable to download Flatcar OS \- [#33469](https://projects.theforeman.org/issues/33469)
+
+#### Foreman - Templates
+* Job Invocation - demodulize resource type for permission \- [#33853](https://projects.theforeman.org/issues/33853)
+* Package manager snippet \- [#33695](https://projects.theforeman.org/issues/33695)
+* Remove CentOS 8 AppStream kickstart workaround \- [#33680](https://projects.theforeman.org/issues/33680)
+* Optionally use ignoredisk in kickstart default partition template \- [#33666](https://projects.theforeman.org/issues/33666)
+* Rename UNDI iPXE filename to end with zero \- [#33584](https://projects.theforeman.org/issues/33584)
+* Unlocking a locked template does nothing \- [#33570](https://projects.theforeman.org/issues/33570)
+* Prepare Kickstart for RHEL 9 provisioning \- [#33566](https://projects.theforeman.org/issues/33566)
+* Provisioning of EL no longer writes to tty3 \- [#33426](https://projects.theforeman.org/issues/33426)
+* Add support for all RHEL derivatives in Content Host Registration \- [#33408](https://projects.theforeman.org/issues/33408)
+* service network restart on EL8 doesn't work \- [#33092](https://projects.theforeman.org/issues/33092)
+* Provide a description for shipped provisioning templates \- [#33034](https://projects.theforeman.org/issues/33034)
+* AutoYaST iPXE should support static networking \- [#32937](https://projects.theforeman.org/issues/32937)
+* Resource template input for job templates \- [#32822](https://projects.theforeman.org/issues/32822)
+* Add ksvalidator and grub2 script checks to jenkins suite \- [#31947](https://projects.theforeman.org/issues/31947)
+* Extract Environment from TemplateCombination model \- [#31732](https://projects.theforeman.org/issues/31732)
+* Add eject cdrom snippet and call it from preseed finish script \- [#31454](https://projects.theforeman.org/issues/31454)
+
+#### Foreman - Tests
+* Fix test failures in plugins \- [#33560](https://projects.theforeman.org/issues/33560)
+* Introduce skip pattern for ACL tests \- [#33122](https://projects.theforeman.org/issues/33122)
+* capybara 3.32.1 breaks ReportTemplateJSIntegrationTest \- [#29481](https://projects.theforeman.org/issues/29481)
+
+#### Foreman - Trends
+* Remove statistics & trends API endpoints \- [#30504](https://projects.theforeman.org/issues/30504)
+
+#### Foreman - Users, Roles and Permissions
+* Unable to assign ansible roles to a host group via hammer/api with non-admin user \- [#33727](https://projects.theforeman.org/issues/33727)
+* Drop view_tasks permission in core \- [#33387](https://projects.theforeman.org/issues/33387)
+* Non-admin users can not list their Personal Access Tokens \- [#33371](https://projects.theforeman.org/issues/33371)
+
+#### Foreman - Web Interface
+* Host details tabs aren't clickable \- [#33805](https://projects.theforeman.org/issues/33805)
+* Add report and facts to host details kebab dropdown \- [#33714](https://projects.theforeman.org/issues/33714)
+* Add build review modal in the new host details page \- [#33696](https://projects.theforeman.org/issues/33696)
+* After creating new host group from help page, page doesn't redirect to main landing page. \- [#33637](https://projects.theforeman.org/issues/33637)
+* Remove experimental host wizard page \- [#33621](https://projects.theforeman.org/issues/33621)
+* "All audits" link in host details page doesn't work \- [#33617](https://projects.theforeman.org/issues/33617)
+* Adding a banner for the experimental host details page \- [#33597](https://projects.theforeman.org/issues/33597)
+* There should be buttons to link in between the old host page and the new host detail page \- [#33507](https://projects.theforeman.org/issues/33507)
+* The new host detail page audits card gets misaligned \- [#33505](https://projects.theforeman.org/issues/33505)
+* The new host detail page hostname should never be split to two lines \- [#33504](https://projects.theforeman.org/issues/33504)
+* Mac Address label should have capital letters in the word MAC on the new host detail page \- [#33503](https://projects.theforeman.org/issues/33503)
+* The host owner name should be expanded to the full width as it typically takes more than a one line \- [#33502](https://projects.theforeman.org/issues/33502)
+* New host detail page MAC should remain on one line if there's a long host group next to it \- [#33501](https://projects.theforeman.org/issues/33501)
+* Experimental host page kebab menu buttons do nothing \- [#33491](https://projects.theforeman.org/issues/33491)
+* Edit button in experimental host page doesn't work \- [#33490](https://projects.theforeman.org/issues/33490)
+* Add setting for redirecting to the new host details page  \- [#33484](https://projects.theforeman.org/issues/33484)
+* "Login Page Footer Text" Blocking Login Button on Foreman UI \- [#33481](https://projects.theforeman.org/issues/33481)
+* Use the new confirm modal in the host status clear \- [#33473](https://projects.theforeman.org/issues/33473)
+* Host details page tabs re-render continuously \- [#33324](https://projects.theforeman.org/issues/33324)
+* broken Documentation button in search for react pages  \- [#33323](https://projects.theforeman.org/issues/33323)
+* Add power options dropdown to details card \- [#33268](https://projects.theforeman.org/issues/33268)
+* After creating new host group or Http proxy, page doesn't redirect to main landing page. \- [#33177](https://projects.theforeman.org/issues/33177)
+* Add console to the host details page \- [#32999](https://projects.theforeman.org/issues/32999)
+* Add manageBookmarks to pf4 bookmarks \- [#32656](https://projects.theforeman.org/issues/32656)
+* Move the host status page from foreman_wreckingball to core \- [#31638](https://projects.theforeman.org/issues/31638)
+* The time ago  creation line is not translated in the new host details page \- [#30984](https://projects.theforeman.org/issues/30984)
+
+#### Hammer
+* Remove a space in hammer's shebang \- [#33810](http://projects.theforeman.org/issues/33810)
+* Wrap option descriptions to 80 chars \- [#33129](http://projects.theforeman.org/issues/33129)
+* Don't store @context in field params \- [#33259](http://projects.theforeman.org/issues/33259)
+* Change from superficial copy to deep copy of fields([PR #348](https://github.com/theforeman/hammer-cli/pull/348)) \- [#29093](http://projects.theforeman.org/issues/29093)
+* Make api docs params to be the main options \- [#33226](http://projects.theforeman.org/issues/33226)
+* Show depr warning only on option usage \- [#33225](http://projects.theforeman.org/issues/33225)
+* Extract descs to option details section \- [#32783](http://projects.theforeman.org/issues/32783)
+* Make sure provided options override defaults \- [#33711](http://projects.theforeman.org/issues/33711)
+* Make template create/update commands use resolver \- [#33721](http://projects.theforeman.org/issues/33721)
+* Show status once for proxy info([PR #581](https://github.com/theforeman/hammer-cli-foreman/pull/581)) \- [#19510](http://projects.theforeman.org/issues/19510)
+* Add proxy status and version to info command([PR #572](https://github.com/theforeman/hammer-cli-foreman/pull/572))
+* Associate a vm via hammer to a compute resource \- [#33047](http://projects.theforeman.org/issues/33047)
+* Fix option builders and tests \- [#33226](http://projects.theforeman.org/issues/33226)
+* Add parent title option for hostgroup \- [#32878](http://projects.theforeman.org/issues/32878)
+
+#### Installer
+* disable registration module on smart proxies by default \- [#33864](https://projects.theforeman.org/issues/33864)
+* Drop content type settings from katello module \- [#33830](https://projects.theforeman.org/issues/33830)
+* Add host_reports to the installer \- [#33760](https://projects.theforeman.org/issues/33760)
+* For Katello scenario, do not deploy Puppet by default \- [#33337](https://projects.theforeman.org/issues/33337)
+* Foreman client certificates should be used to set up qpid queues \- [#33233](https://projects.theforeman.org/issues/33233)
+* potential memory leak in puma \- [#33214](https://projects.theforeman.org/issues/33214)
+
+#### Installer - Foreman modules
+* Allow registration through content proxy via port 443 \- [#33863](https://projects.theforeman.org/issues/33863)
+* Foreman Proxy Templates feature only listens to https by default \- [#33808](https://projects.theforeman.org/issues/33808)
+*  Mark host where the installer is running as smart-proxy when deploying smart-proxy \- [#33790](https://projects.theforeman.org/issues/33790)
+* Mark host where the installer is running as foreman when deploying foreman \- [#33789](https://projects.theforeman.org/issues/33789)
+* Support Pulp 3.15 \- [#33766](https://projects.theforeman.org/issues/33766)
+* Support OSTree & Python content enablement \- [#33751](https://projects.theforeman.org/issues/33751)
+* workaround for pulpcore-content PostgreSQL connection issue \- [#33744](https://projects.theforeman.org/issues/33744)
+* need to generate private db key for pulpcore 3.15 \- [#33733](https://projects.theforeman.org/issues/33733)
+* dynflow workers started before redis \- [#33511](https://projects.theforeman.org/issues/33511)
+* Use OpenSSL Ruby to ensure Apache certificate bundle is in the proper format on FIPS machines \- [#33431](https://projects.theforeman.org/issues/33431)
+* Candlepin.conf refers to incorrect job schedule options \- [#33321](https://projects.theforeman.org/issues/33321)
+* Refer to FQDN instead of "Foreman server" in SmartProxy registration error messages \- [#33320](https://projects.theforeman.org/issues/33320)
+
+#### Installer - foreman-installer script
+* Foreman Puppet plugin is enabled in the migration even if Foreman is disabled \- [#33577](https://projects.theforeman.org/issues/33577)
+* Date used by katello-certs-check should be formatted correctly by program \- [#33109](https://projects.theforeman.org/issues/33109)
+
+#### Packaging
+* clean up packaged plugins \- [#33867](https://projects.theforeman.org/issues/33867)
+* Add cron to audits cleanup \- [#33623](https://projects.theforeman.org/issues/33623)
+
+#### Packaging - Debian/Ubuntu
+* drop obsolete plugin from Debian packaging: xen \- [#33871](https://projects.theforeman.org/issues/33871)
+* drop obsolete plugin from Debian packaging: cockpit \- [#33870](https://projects.theforeman.org/issues/33870)
+* drop obsolete plugin from Debian packaging: digitalocean \- [#33869](https://projects.theforeman.org/issues/33869)
+* drop obsolete plugin from Debian packaging: azure \- [#33868](https://projects.theforeman.org/issues/33868)
+* Drop Ubuntu 18.04 support \- [#33785](https://projects.theforeman.org/issues/33785)
+
+#### Packaging - RPMs
+* drop obsolete plugin from RPM packaging: digitalocean \- [#33880](https://projects.theforeman.org/issues/33880)
+* drop obsolete plugin from RPM packaging: xen \- [#33879](https://projects.theforeman.org/issues/33879)
+* katello-change-hostname should conditionally mention updating puppet-foreman-server-url \- [#33743](https://projects.theforeman.org/issues/33743)
+* change hostname suggests dropped parameter foreman-proxy-content-parent-fqdn \- [#33719](https://projects.theforeman.org/issues/33719)
+* Hostname change script should suggest new --puppet-server-foreman-url \- [#33580](https://projects.theforeman.org/issues/33580)
+
+#### Smart Proxy
+* Require templates for Registration module \- [#33756](https://projects.theforeman.org/issues/33756)
+* bundler warns /usr/share/foreman-proxy is not writable \- [#33520](https://projects.theforeman.org/issues/33520)
+
+#### Smart Proxy - DHCP
+* Add ip and mac address validations to api endpoints in dhcp api controller \- [#18069](https://projects.theforeman.org/issues/18069)
+
+#### Smart Proxy - Security
+* Disable Webrick client initiated renegotiation \- [#33452](https://projects.theforeman.org/issues/33452)
+* native_ms/dnscmd providers should use shell escaping when running commands \- [#4026](https://projects.theforeman.org/issues/4026)
+
+#### Smart Proxy - TFTP
+* Smartproxy TFTP using wget -c to pull new PXE defaults produces errors while booting \- [#2412](https://projects.theforeman.org/issues/2412)
+
+#### Smart Proxy - Templates
+* Do not pass proxy in x-forwarded-for \- [#32607](https://projects.theforeman.org/issues/32607)
+
+*A full list of changes in 3.1.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1488)*
 
 ### Contributors
 
