List Smart Proxy as Ruby 2.7 compatible

--- a/_includes/manuals/3.0/4.3.1_smartproxy_installation.md
+++ b/_includes/manuals/3.0/4.3.1_smartproxy_installation.md
@@ -23,7 +23,7 @@ git clone git://github.com/theforeman/smart-proxy.git -b {{page.version}}-stable
 
 The smart proxy will run with the following requirements (aside from rubygem dependencies):
 
-* Ruby 2.5 or 2.6
+* Ruby 2.5, 2.6 or 2.7
 
 #### Windows
 The Microsoft smart-proxy installation procedure is very basic compared to the RPM or APT based solution. You need to run smart-proxy from the source as well as install Ruby and Ruby DevKit.
