Since the function of audits expire has changed, it's good to change docs too.

--- a/_includes/manuals/3.1/4.1.4_auditing.md
+++ b/_includes/manuals/3.1/4.1.4_auditing.md
@@ -18,24 +18,18 @@ Template changes also store a diff of the changes, and the ability to roll back 
 
 #### Expire old audits automatically
 
-You will probably want to delete your old audits after some time. To achieve this, we have a rake task.
-You can run task `foreman-rake audits:expire` manually whenever required.
+You will probably want to delete your old audits after some time. To achieve this, there is a cronjob. This job invokes 
+rake task `audits:expire`. There is no default value for number of days to keep because every user has different needs. 
+However, you can configure an amount of days to keep in Foreman in Settings (`Administer -> Settings -> General (Tab) -> Save audits interval`) to fit to your needs. You can leave value empty to no expire old audits. Also this task can be invoked manually whenever required. Invocation can be done by `foreman rake audits:expire`. If the `days` parameter is not provided, the task is trying to take configured value from `Settings`. If this value is also empty, task is closed and no audits are expired. 
 
 Available parameters:
 * days => number of days to keep audits (defaults to 90)
 
 Examples:
-
-1. Expires all audits older then 90 days
-
-		<pre>foreman-rake audits:expire</pre>
-
-2. Expires all audits older then 7 days
+1. Expires all audits older then 7 days
 
 		<pre>foreman-rake audits:expire days=7</pre>
 
-
-Note that you can also set a cronjob which will delete your audits periodically using this rake task.
 
 #### Anonymize old audits
 
