--- a/_includes/manuals/3.1/2.1_quickstart_installation.md
+++ b/_includes/manuals/3.1/2.1_quickstart_installation.md
@@ -202,7 +202,7 @@ wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
   <i>No operating system selected.</i>
 </div>
 
-<div class="quickstart_os quickstart_os_rhel7 quickstart_os_el7 quickstart_os_rhel8 quickstart_os_el8">
+<div class="quickstart_os quickstart_os_rhel7 quickstart_os_el7 quickstart_os_centos7 other_el7 quickstart_os_rhel8 quickstart_os_el8">
 {% highlight bash %}
 sudo yum -y install foreman-installer
 {% endhighlight %}
