Update headline features for Foreman 3.1

--- a/_includes/manuals/3.1/1.2_release_notes.md
+++ b/_includes/manuals/3.1/1.2_release_notes.md
@@ -1,8 +1,35 @@
 ## Release notes for {{page.version}}
 
-This section will be updated prior to the next release.
-
 ### Headline features
+
+#### Improvements and additions to the new Host Details page:
+The new Host Details page is no longer experimental, although it is still not the default one. One can change `Settings` -> `New hosts details UI` to Yes to make it the default option. There are few new tabs added on this page,
+
+* ##### Insights tab
+The recommendations are available for the hosts in the Insights tab when using RHEL with a Red Hat cloud subscription.
+It is feasible to begin remediation for the suggested remedies (if any are available).
+
+* ##### Ansible tab
+It has the ability to manage Ansible roles and variables.
+The recurring jobs for the host can also be scheduled from the Ansible tab.
+
+* ##### PatternFly 4 Search tab
+A contemporary search experience is provided by the new search bar. It's the beginning of an eventual transition to PatternFly 4 for many UI components in the future.
+
+* ##### New Build button and card for BMC Power Management
+New modals for a build button and BMC Power Management is available, which improves exprience of new Host Details page.
+
+#### Descriptions for all of the provisioning templates:
+Over a hundred new descriptions have been added to provisioning templates, snippets, and scripts to assist users understand particular usage and use them in an effective manner.
+
+#### The purge:puppet task:
+A new foreman-rake purge:puppet task has been added to purge Puppet data if Puppet ENC functionality is not required.
+
+#### Cron job to clean old Audits
+A new cron job has been introduced to purge the old Audits on a daily basis. The new `Saved audits interval` setting allows you to specify the number of days you want to save Audits for.
+
+#### Provisioning snippets support Puppet 7
+The provisioning snippets have been updated to setup Puppet 7 repositories, as well as configure and install packages from those repositories.
 
 ### Upgrade warnings
 
