Add demoes 102 and 103 to the website

--- a/demos/2021.md
+++ b/demos/2021.md
@@ -22,6 +22,22 @@ If you've any questions or feedback, we welcome any feedback in our
 
 ## User-focused Demos - Foreman
 
+### [Demo 103](https://youtu.be/s0toiAyUlfE)
+
+
+* [The new host page - new features](https://youtu.be/s0toiAyUlfE?t=373)
+* [Add PF4 Searchbar](https://youtu.be/s0toiAyUlfE?t=558)
+* [New Host details insights tab](https://youtu.be/s0toiAyUlfE?t=748)
+* [Ansible tab on new Host detail page](https://youtu.be/s0toiAyUlfE?t=1039)
+* [Cron for audits cleanup](https://youtu.be/s0toiAyUlfE?t=1360)
+
+### [Demo 102](https://youtu.be/Yps21ZLAc-g)
+
+* [Default Provisioning Templates](https://youtu.be/Yps21ZLAc-g?t=105)
+* [Searching host reports by the owner (also in filters)](https://youtu.be/Yps21ZLAc-g?t=260)
+* [Package manager template snippet](https://youtu.be/Yps21ZLAc-g?t=516)
+* [`katello_ca_consumer` in registration template](https://youtu.be/Yps21ZLAc-g?t=580)
+
 ### [Demo 101](https://www.youtube.com/watch?v=iW6QE-glh2I)
 
 * [New Ansible module `organization_info`](https://youtu.be/iW6QE-glh2I?t=249)
@@ -117,6 +133,26 @@ If you've any questions or feedback, we welcome any feedback in our
 
 
 ## User-focused Demos - Foreman & Katello plugin
+
+### [Demo 103](https://youtu.be/s0toiAyUlfE)
+
+* [UI for listing generic content units at repository level + removal](https://youtu.be/s0toiAyUlfE?t=1850)
+* [OSTree repository support preview](https://youtu.be/s0toiAyUlfE?t=1953)|https://projects.theforeman.org/issues/33291|3.1|
+* [Ansible collections UI](https://youtu.be/s0toiAyUlfE?t=2094)
+* [CV names in alert when trying to delete repo](https://youtu.be/s0toiAyUlfE?t=2185)
+* [new behaviour if organization isn't selected](https://youtu.be/s0toiAyUlfE?t=2245)
+* [CV - UI Search Bookmark](https://youtu.be/s0toiAyUlfE?t=2280)
+* [Apache configuration changes for content proxy](https://youtu.be/s0toiAyUlfE?t=2402)
+
+### [Demo 102](https://youtu.be/Yps21ZLAc-g)
+
+* [New CV UI - UI switchover, Adding errata filter by Date and type, filters on errata by Id filters, Delete CV, Breadcrumbs, Bulk adding component CVs to composite CVs, Permissions on the CV UI](https://youtu.be/Yps21ZLAc-g?t=701)
+* [New CV UI - Version details repository drop-down, editing filters (name, description), Enter key on edit content view filter,  Added/Available/All on content view](https://youtu.be/Yps21ZLAc-g?t=1393)
+* [New CV UI -  File list in Content View Version Details](https://youtu.be/Yps21ZLAc-g?t=1784)
+* [New Content Browser UI](https://youtu.be/Yps21ZLAc-g?t=1881)
+* [New Host UI - host details enhancements](https://youtu.be/Yps21ZLAc-g?t=2192)
+* [New Host UI - Traces - Enable Tracer & restart by remote execution](https://youtu.be/Yps21ZLAc-g?t=2369)
+* [New Host UI -  Content - Errata - Bulk select & apply](https://youtu.be/Yps21ZLAc-g?t=2641)
 
 ### [Demo 101](https://www.youtube.com/watch?v=iW6QE-glh2I)
 
@@ -214,6 +250,11 @@ If you've any questions or feedback, we welcome any feedback in our
 
 
 ## Foreman developer-focused demos
+
+### [Demo 103](https://youtu.be/s0toiAyUlfE)
+
+* [Fact Parser Registry](https://youtu.be/Yps21ZLAc-g?t=2831)
+* [Extend host details kebab dropdown from plugins](https://youtu.be/Yps21ZLAc-g?t=3035)
 
 ### [Demo 101](https://www.youtube.com/watch?v=iW6QE-glh2I)
 
