--- a/demos/2021.md
+++ b/demos/2021.md
@@ -137,7 +137,7 @@ If you've any questions or feedback, we welcome any feedback in our
 ### [Demo 103](https://youtu.be/s0toiAyUlfE)
 
 * [UI for listing generic content units at repository level + removal](https://youtu.be/s0toiAyUlfE?t=1850)
-* [OSTree repository support preview](https://youtu.be/s0toiAyUlfE?t=1953)|https://projects.theforeman.org/issues/33291|3.1|
+* [OSTree repository support preview](https://youtu.be/s0toiAyUlfE?t=1953)
 * [Ansible collections UI](https://youtu.be/s0toiAyUlfE?t=2094)
 * [CV names in alert when trying to delete repo](https://youtu.be/s0toiAyUlfE?t=2185)
 * [new behaviour if organization isn't selected](https://youtu.be/s0toiAyUlfE?t=2245)
