Update release notes, contributors for Foreman 3.1 RC2

--- a/_includes/manuals/3.1/1.2_release_notes.md
+++ b/_includes/manuals/3.1/1.2_release_notes.md
@@ -88,6 +88,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 #### Foreman - Facts
 * Ignore unstable legacy Facter facts  \- [#33778](https://projects.theforeman.org/issues/33778)
 * RHSM IPv6 fact is not being parsed for foreman hosts. \- [#33776](https://projects.theforeman.org/issues/33776)
+* Cloned viewer role cannot view facts \- [#33656](https://projects.theforeman.org/issues/33656)
 * Reduce allocations in FactImporter#update_facts \- [#33639](https://projects.theforeman.org/issues/33639)
 * Add fact parser registry \- [#33419](https://projects.theforeman.org/issues/33419)
 * foreman-rake facts:clean fails with foreign key constraint violation \- [#30028](https://projects.theforeman.org/issues/30028)
@@ -99,6 +100,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * The edit interface view (in interface tab) is too narrow for vmware network names \- [#33574](https://projects.theforeman.org/issues/33574)
 
 #### Foreman - Host registration
+* Fix name & path to OS host_init_config template \- [#33979](https://projects.theforeman.org/issues/33979)
 * In UI form show proxies that have enabled Registration and templates features only \- [#33697](https://projects.theforeman.org/issues/33697)
 * Run 'subscription-manager clean' when force=true \- [#33540](https://projects.theforeman.org/issues/33540)
 * Use PF4 styling for warning in registration form \- [#33390](https://projects.theforeman.org/issues/33390)
@@ -113,6 +115,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 
 #### Foreman - JavaScript stack
 * Host details active tab not set correctly when tab name contains spaces \- [#33894](https://projects.theforeman.org/issues/33894)
+* The new host detail page allows me to build the host even if I have view only permissions \- [#33872](https://projects.theforeman.org/issues/33872)
 * Host details page needs some integration tests \- [#33833](https://projects.theforeman.org/issues/33833)
 * foreman-develop-package-release fails after removing react-intl \- [#33800](https://projects.theforeman.org/issues/33800)
 * Update pf4 to 4.162.2 \- [#33758](https://projects.theforeman.org/issues/33758)
@@ -132,6 +135,9 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * Make tabs on new Host detail page routable \- [#32398](https://projects.theforeman.org/issues/32398)
 * Add action items dropdown extension mechanism in host details page \- [#30981](https://projects.theforeman.org/issues/30981)
 * Add PF4 icons in empty state \- [#30865](https://projects.theforeman.org/issues/30865)
+
+#### Foreman - Monitoring
+* forget_status doesn't update the global host's state \- [#33882](https://projects.theforeman.org/issues/33882)
 
 #### Foreman - Packaging
 * Make dynflow-sidekiq@\* services part of foreman.service \- [#33723](https://projects.theforeman.org/issues/33723)
@@ -170,6 +176,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * Add scoped search definition for arf reports that finds reports for hosts owned by current user \- [#33025](https://projects.theforeman.org/issues/33025)
 
 #### Foreman - Settings
+* Speed up settings index page \- [#33935](https://projects.theforeman.org/issues/33935)
 * Foreman wont start with old settings in DB \- [#33861](https://projects.theforeman.org/issues/33861)
 * Settings defined in settings.yaml do not take precedence in the new DSL \- [#33791](https://projects.theforeman.org/issues/33791)
 * Setting DSL does not use the explicit initial values \- [#33740](https://projects.theforeman.org/issues/33740)
@@ -199,6 +206,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * TFTP Unable to download Flatcar OS \- [#33469](https://projects.theforeman.org/issues/33469)
 
 #### Foreman - Templates
+* Add current date macro \- [#33907](https://projects.theforeman.org/issues/33907)
 * Job Invocation - demodulize resource type for permission \- [#33853](https://projects.theforeman.org/issues/33853)
 * Package manager snippet \- [#33695](https://projects.theforeman.org/issues/33695)
 * Remove CentOS 8 AppStream kickstart workaround \- [#33680](https://projects.theforeman.org/issues/33680)
@@ -212,6 +220,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * Provide a description for shipped provisioning templates \- [#33034](https://projects.theforeman.org/issues/33034)
 * AutoYaST iPXE should support static networking \- [#32937](https://projects.theforeman.org/issues/32937)
 * Resource template input for job templates \- [#32822](https://projects.theforeman.org/issues/32822)
+* include repo support for puppet 7 in provisioning snippets \- [#32602](https://projects.theforeman.org/issues/32602)
 * Add ksvalidator and grub2 script checks to jenkins suite \- [#31947](https://projects.theforeman.org/issues/31947)
 * Extract Environment from TemplateCombination model \- [#31732](https://projects.theforeman.org/issues/31732)
 * Add eject cdrom snippet and call it from preseed finish script \- [#31454](https://projects.theforeman.org/issues/31454)
@@ -230,6 +239,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * Non-admin users can not list their Personal Access Tokens \- [#33371](https://projects.theforeman.org/issues/33371)
 
 #### Foreman - Web Interface
+* New Host detail page - small screen can't see build modal \- [#33955](https://projects.theforeman.org/issues/33955)
 * Host details tabs aren't clickable \- [#33805](https://projects.theforeman.org/issues/33805)
 * Add report and facts to host details kebab dropdown \- [#33714](https://projects.theforeman.org/issues/33714)
 * Add build review modal in the new host details page \- [#33696](https://projects.theforeman.org/issues/33696)
@@ -340,6 +350,6 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Cecile, Adam Ruzicka, Adi Abramovich, Alexander Olofsson, Amir Fefer, Amit Upadhye, Andrew Teixeira, Anna Vitova, Antoine Beaupré, Avi Sharvit, Bernhard Suttner, Birkir Freyr, Chris Roberts, Dave Thomas, Dominik Matoulek, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Gordon Bleux, Jeremy Lenz, John Mitsch, Jonathon Turel, Justin Sherrill, Kamil Szubrycht, Leos Stejskal, Lukáš Zapletal, Magnus Toneby, Marcel Kühlhorn, Marek Hulán, Maria Agaphontzev, Melanie Corr, Nacho Barrientos, Nadja Heitmann, Oleh Fedorenko, Ondřej Ezr, Ondřej Pražák, Patrick Creech, Rahul Bajaj, Romuald Conty, Ron Lavi, Samir Jha, Shimon Shtein, Shira Maximov, Stejskal Leos, Tim Meusel, Tomer Brisker, Trent Anderson, William Clark, Yifat Makias, amtilghman, andrewgdewar, maccelf, rafaelguerra01
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
