--- a/_includes/manuals/3.1/1.2_release_notes.md
+++ b/_includes/manuals/3.1/1.2_release_notes.md
@@ -2,7 +2,7 @@
 
 ### Headline features
 
-#### Improvements and additions to the new Host Details page:
+#### Improvements and additions to the new Host Details page
 The new Host Details page is no longer experimental, although it is still not the default one. One can change `Settings` -> `New hosts details UI` to Yes to make it the default option. There are few new tabs added on this page,
 
 * ##### Insights tab
@@ -19,17 +19,21 @@ A contemporary search experience is provided by the new search bar. It's the beg
 * ##### New Build button and card for BMC Power Management
 New modals for a build button and BMC Power Management is available, which improves exprience of new Host Details page.
 
-#### Descriptions for all of the provisioning templates:
+#### Descriptions for all of the provisioning templates
 Over a hundred new descriptions have been added to provisioning templates, snippets, and scripts to assist users understand particular usage and use them in an effective manner.
 
-#### The purge:puppet task:
-A new foreman-rake purge:puppet task has been added to purge Puppet data if Puppet ENC functionality is not required.
+#### New purge:puppet rake task
+If you don't intend to use the Puppet ENC functionality then this rake task can be used to purge Environments, Puppetclasses, Smartclass parameters and Config groups.
 
 #### Cron job to clean old Audits
 A new cron job has been introduced to purge the old Audits on a daily basis. The new `Saved audits interval` setting allows you to specify the number of days you want to save Audits for.
 
 #### Provisioning snippets support Puppet 7
 The provisioning snippets have been updated to setup Puppet 7 repositories, as well as configure and install packages from those repositories.
+
+#### Performance improvements for index pages and Host Config Status
+The new caching approach speeds up index pages loading while consuming less memory.
+The Host Config Status is now more efficient, using fewer requests and less memory.
 
 ### Upgrade warnings
 
@@ -41,6 +45,9 @@ Users are encouraged to upgrade to Ubuntu 20.04 either on Foreman 2.5 or 3.0.
 Note that this is only support to run Foreman and Foreman Proxy themselves on Ubuntu 18.04. Managing Ubuntu 18.04 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
 ### Deprecations
+
+#### The `:unattended => false` Setting has been deprecated
+The host registration feature can be used to register hosts on Foreman for the sole purpose of an inventory. Refer to [the removal RFC](https://community.theforeman.org/t/rfc-remove-unattended-setting/10035) for more information.
 
 #### Running Foreman on EL7
 
@@ -85,6 +92,9 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 #### Foreman - Compute resources - oVirt
 * Foreman error on retrieving networks/vnics from oVirt if description contains non ascii characters \- [#32908](https://projects.theforeman.org/issues/32908)
 
+#### Foreman - DHCP
+* Provide a meaningful report when a subnet has an invalid address \- [#33929](https://projects.theforeman.org/issues/33929)
+
 #### Foreman - Facts
 * Ignore unstable legacy Facter facts  \- [#33778](https://projects.theforeman.org/issues/33778)
 * RHSM IPv6 fact is not being parsed for foreman hosts. \- [#33776](https://projects.theforeman.org/issues/33776)
@@ -109,11 +119,15 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * Remove hard-coded link to documentation \- [#33215](https://projects.theforeman.org/issues/33215)
 * Move katello_ca_consumer to registration template \- [#32678](https://projects.theforeman.org/issues/32678)
 
+#### Foreman - Internationalization
+* Localized string broken into two separate lines, at &lt;Administer - Locations page&gt;, at &lt;Administer - Organizations page&gt; and at &lt;Infrastructure - Domains&gt;. \- [#31338](https://projects.theforeman.org/issues/31338)
+
 #### Foreman - Inventory
 * Handle different Windows installation types \- [#33769](https://projects.theforeman.org/issues/33769)
 * Distinguish between "regular" hosts and hosts on which Foreman and/or smart proxy runs - models and fact processing \- [#32328](https://projects.theforeman.org/issues/32328)
 
 #### Foreman - JavaScript stack
+* Webpack can't find loaders for plugins in production \- [#34086](https://projects.theforeman.org/issues/34086)
 * Host details active tab not set correctly when tab name contains spaces \- [#33894](https://projects.theforeman.org/issues/33894)
 * The new host detail page allows me to build the host even if I have view only permissions \- [#33872](https://projects.theforeman.org/issues/33872)
 * Host details page needs some integration tests \- [#33833](https://projects.theforeman.org/issues/33833)
@@ -139,8 +153,14 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 #### Foreman - Monitoring
 * forget_status doesn't update the global host's state \- [#33882](https://projects.theforeman.org/issues/33882)
 
+#### Foreman - Organizations and Locations
+* Mismatch report fails with 'uninitialized constant Environment' \- [#33897](https://projects.theforeman.org/issues/33897)
+
 #### Foreman - Packaging
 * Make dynflow-sidekiq@\* services part of foreman.service \- [#33723](https://projects.theforeman.org/issues/33723)
+
+#### Foreman - Parameters
+* Cannot search by organization or location parameter \- [#34008](https://projects.theforeman.org/issues/34008)
 
 #### Foreman - Performance
 * Drop Ruby pre-2.5 compatibility in Host#parse_ip_address \- [#33784](https://projects.theforeman.org/issues/33784)
@@ -206,6 +226,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * TFTP Unable to download Flatcar OS \- [#33469](https://projects.theforeman.org/issues/33469)
 
 #### Foreman - Templates
+* Rename enable-puppetlabs-puppetX-repo to enable-puppetofficial-puppetX-repo \- [#34088](https://projects.theforeman.org/issues/34088)
 * Add current date macro \- [#33907](https://projects.theforeman.org/issues/33907)
 * Job Invocation - demodulize resource type for permission \- [#33853](https://projects.theforeman.org/issues/33853)
 * Package manager snippet \- [#33695](https://projects.theforeman.org/issues/33695)
@@ -221,6 +242,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * AutoYaST iPXE should support static networking \- [#32937](https://projects.theforeman.org/issues/32937)
 * Resource template input for job templates \- [#32822](https://projects.theforeman.org/issues/32822)
 * include repo support for puppet 7 in provisioning snippets \- [#32602](https://projects.theforeman.org/issues/32602)
+* save_to_file() in templates cuts off last end of line \- [#32461](https://projects.theforeman.org/issues/32461)
 * Add ksvalidator and grub2 script checks to jenkins suite \- [#31947](https://projects.theforeman.org/issues/31947)
 * Extract Environment from TemplateCombination model \- [#31732](https://projects.theforeman.org/issues/31732)
 * Add eject cdrom snippet and call it from preseed finish script \- [#31454](https://projects.theforeman.org/issues/31454)
@@ -234,11 +256,13 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * Remove statistics & trends API endpoints \- [#30504](https://projects.theforeman.org/issues/30504)
 
 #### Foreman - Users, Roles and Permissions
+* Authorizer cache loads all permitted resources to memory \- [#34093](https://projects.theforeman.org/issues/34093)
 * Unable to assign ansible roles to a host group via hammer/api with non-admin user \- [#33727](https://projects.theforeman.org/issues/33727)
 * Drop view_tasks permission in core \- [#33387](https://projects.theforeman.org/issues/33387)
 * Non-admin users can not list their Personal Access Tokens \- [#33371](https://projects.theforeman.org/issues/33371)
 
 #### Foreman - Web Interface
+* Audit card's 'All audits' link doesn't filter the host \- [#34085](https://projects.theforeman.org/issues/34085)
 * New Host detail page - small screen can't see build modal \- [#33955](https://projects.theforeman.org/issues/33955)
 * Host details tabs aren't clickable \- [#33805](https://projects.theforeman.org/issues/33805)
 * Add report and facts to host details kebab dropdown \- [#33714](https://projects.theforeman.org/issues/33714)
@@ -262,6 +286,7 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 * broken Documentation button in search for react pages  \- [#33323](https://projects.theforeman.org/issues/33323)
 * Add power options dropdown to details card \- [#33268](https://projects.theforeman.org/issues/33268)
 * After creating new host group or Http proxy, page doesn't redirect to main landing page. \- [#33177](https://projects.theforeman.org/issues/33177)
+* Host details tabs titles aren't translated \- [#33151](https://projects.theforeman.org/issues/33151)
 * Add console to the host details page \- [#32999](https://projects.theforeman.org/issues/32999)
 * Add manageBookmarks to pf4 bookmarks \- [#32656](https://projects.theforeman.org/issues/32656)
 * Move the host status page from foreman_wreckingball to core \- [#31638](https://projects.theforeman.org/issues/31638)
