Add final demos of 2021

--- a/demos/2021.md
+++ b/demos/2021.md
@@ -22,6 +22,13 @@ If you've any questions or feedback, we welcome any feedback in our
 
 ## User-focused Demos - Foreman
 
+### [Demo 104](https://www.youtube.com/watch?v=UWHy7NuR9yA)
+
+* [Convert2RHEL ansible role](https://youtu.be/UWHy7NuR9yA?t=616)
+* [Interactive recommendations chart](https://youtu.be/UWHy7NuR9yA?t=1659)
+* [Root Password inheritance between hosts and hostgroups](https://youtu.be/UWHy7NuR9yA?t=963)
+
+
 ### [Demo 103](https://youtu.be/s0toiAyUlfE)
 
 
@@ -133,6 +140,16 @@ If you've any questions or feedback, we welcome any feedback in our
 
 
 ## User-focused Demos - Foreman & Katello plugin
+
+### [Demo 104](https://www.youtube.com/watch?v=UWHy7NuR9yA)
+
+* [New host Errata - Filter by type & severity](https://youtu.be/UWHy7NuR9yA?t=1281)
+* [New host details - Repository Sets table](https://youtu.be/UWHy7NuR9yA?t=1381)
+* [As a user, I should be able to restrict a custom repository to RHEL 9](https://youtu.be/UWHy7NuR9yA?t=1997)
+* [OSTree repositories and content are synced to external smart proxies](https://youtu.be/UWHy7NuR9yA?t=2099)
+* [OSTree content uploads via Hammer](https://youtu.be/UWHy7NuR9yA?t=2216)
+* [OSTree Content View Publishing](https://youtu.be/UWHy7NuR9yA?t=2406)
+
 
 ### [Demo 103](https://youtu.be/s0toiAyUlfE)
 
@@ -250,6 +267,10 @@ If you've any questions or feedback, we welcome any feedback in our
 
 
 ## Foreman developer-focused demos
+
+### [Demo 104](https://www.youtube.com/watch?v=UWHy7NuR9yA)
+
+* [Rails 6.1 & plugin maintenance](https://youtu.be/UWHy7NuR9yA?t=2686)
 
 ### [Demo 103](https://youtu.be/s0toiAyUlfE)
 
