Add drop require_ssl_smart_proxies upgrade warning

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -6,6 +6,12 @@ This section will be updated prior to the next release.
 
 ### Upgrade warnings
 
+#### `require_ssl_smart_proxies` setting dropped
+
+The `require_ssl_smart_proxies` setting has been dropped and Foreman now behaves as if the value was true (the default). This means it's no longer possible to use reverse DNS instead of client certificates over HTTPS connections. Upgrading users should ensure a valid Public Key Infrastructure (PKI) exists.
+
+For more information see the [RFC](https://community.theforeman.org/t/drop-require-ssl-and-require-ssl-smart-proxies-settings/26772) and [PR](https://github.com/theforeman/foreman/pull/9021).
+
 ### Deprecations
 
 #### Running Foreman on EL7
