Add BMC credentials upgrade note
Signed-off-by: Lukas Zapletal <lzap+git@redhat.com>

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -14,6 +14,8 @@ For more details and discussion read [the RFC](https://community.theforeman.org/
 
 ### Deprecations
 
+BMC credentials access through ENC YAML output and templates is turned off by default for increased security. To turn it on, go to Administer - Settings and turn the "BMC credentials access" setting on.
+
 We've updated our browsers compatibility to support the following:
 
 * Google Chrome - latest version
