--- a/_includes/manuals/3.0/3.1.1_supported_platforms.md
+++ b/_includes/manuals/3.0/3.1.1_supported_platforms.md
@@ -30,7 +30,7 @@ PostgreSQL version 10 or newer. For EL 7 this is available from Software Collect
 
 It is recommended to apply all OS updates if possible.
 
-All platforms will require Puppet 5 or higher, which may be installed from OS or the Puppet Labs repositories.
+All platforms will require Puppet 6 or higher, which may be installed from Puppet's repositories.
 
 Other operating systems will need to use alternative installation methods, such as from source.
 
