--- a/_includes/manuals/3.1/1.2_release_notes.md
+++ b/_includes/manuals/3.1/1.2_release_notes.md
@@ -61,6 +61,61 @@ Existing installations should start thinking about a migration plan.
 
 Note that this is only support to run Foreman and Foreman Proxy themselves on EL7. Managing EL7 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
+### Release notes for 3.1.1
+#### Foreman - Audit Log
+* Recent audits card in new host page is missing username \- [#34223](https://projects.theforeman.org/issues/34223)
+
+#### Foreman - Compute resources - VMware
+* Unable to create compute profile for specific vmware compute resource \- [#30550](https://projects.theforeman.org/issues/30550)
+* Cannot view Compute-Profiles from a specific Compute-Resource \- [#28155](https://projects.theforeman.org/issues/28155)
+
+#### Foreman - Facts
+* New OS created due to facts mismatch for operatingsystem for RHSM, Puppet and Ansible \- [#33981](https://projects.theforeman.org/issues/33981)
+
+#### Foreman - Host creation
+* Host form redirect relies on the primary interface being the first interface \- [#34300](https://projects.theforeman.org/issues/34300)
+* Remove workaround for root_password encoding \- [#34289](https://projects.theforeman.org/issues/34289)
+
+#### Foreman - Host registration
+* Missing example for "Install packages" field \- [#34252](https://projects.theforeman.org/issues/34252)
+* Grammatical errors with Insecure help text at Host Registration \- [#34250](https://projects.theforeman.org/issues/34250)
+* Host facts are not uploaded to Foreman when host is registered with global registration \- [#34249](https://projects.theforeman.org/issues/34249)
+* Fix bool params in global registration template \- [#34206](https://projects.theforeman.org/issues/34206)
+
+#### Foreman - Monitoring
+* Report disallowed metric labels as "other" \- [#34122](https://projects.theforeman.org/issues/34122)
+
+#### Foreman - Packaging
+* Pin psych &lt; 4 \- [#34212](https://projects.theforeman.org/issues/34212)
+
+#### Foreman - Reporting
+* Remove warning from reports page in 3.1 \- [#34140](https://projects.theforeman.org/issues/34140)
+* Importing puppet report via the API does not authorize \- [#34026](https://projects.theforeman.org/issues/34026)
+
+#### Foreman - Templates
+* upgrade fails during db:seed with ActiveRecord::RecordNotDestroyed: Failed to destroy the record \- [#34299](https://projects.theforeman.org/issues/34299)
+* More Anaconda kernel boot parameters without 'inst.' prefix template changes \- [#34265](https://projects.theforeman.org/issues/34265)
+* Puppet aio detection is broken in Foreman 3.1 provisioning templates, PR#8899 is full of typos \- [#34214](https://projects.theforeman.org/issues/34214)
+* is_true? & is_false? template helpers \- [#34213](https://projects.theforeman.org/issues/34213)
+* Include Tower extra vars feature when calling the API callback \- [#33942](https://projects.theforeman.org/issues/33942)
+
+#### Foreman - Web Interface
+* Ignore URL query params when setting active tab \- [#34271](https://projects.theforeman.org/issues/34271)
+* Core cards in overview tab should be arrangeable \- [#34142](https://projects.theforeman.org/issues/34142)
+* Hosts UI - UX Review - Spacing \- [#34129](https://projects.theforeman.org/issues/34129)
+* Host Detail Graphs VERY slow to load after upgrade to 3.0.0-rc1 \- [#33310](https://projects.theforeman.org/issues/33310)
+
+#### Installer - Foreman modules
+* [Custom Certs] - Failed to install the custom certs on Katello 4.3, works on 4.1 \- [#34317](https://projects.theforeman.org/issues/34317)
+* Seed may not be triggered after migration \- [#34308](https://projects.theforeman.org/issues/34308)
+* support KEEP_CHANGELOG_LIMIT option with pulpcore \- [#34298](https://projects.theforeman.org/issues/34298)
+* Katello 4.2 to 4.3 upgrade doesn't trigger apipie:cache:index, breaking some new hammer commands \- [#34161](https://projects.theforeman.org/issues/34161)
+
+#### Smart Proxy - DNS
+* Windows DNSCMD no implicit conversion of nil into String \- [#34226](https://projects.theforeman.org/issues/34226)
+
+*A full list of changes in 3.1.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v%5Bcf_12%5D%5B%5D=1524)*
+
 ### Release notes for 3.1.0
 #### Foreman - API
 * Drop non-standard compliant way of selecting api version \- [#33787](https://projects.theforeman.org/issues/33787)
